# ThreatJalster

./: .gitignore  LICENSE  README.md  buildear.txt  index.html  package-lock.json  package.json
docs/: THEME_GUIDE.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/components/: ImagePreviewWindow.module.css  ImagePreviewWindow.tsx  ToastManager.tsx
src/components/canvas/: MiniMapNode.tsx  ThreatCanvas.tsx
src/components/nodes/: EvidenceNode.module.css  EvidenceNode.tsx
src/hooks/: useTauriFileDrop.ts
src/lib/: tauri.ts
src/store/: useWorkspaceStore.ts
src/types/: workspace.ts
